--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+configure
+ar-lib
+*.in
+config.h*
+config.sub
+*.a
+*.lo
+*.o
+*.la
+stamp-h*
+src/Makefile
+src/pghx/Makefile
+tests/Makefile
+Makefile
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
